# mediocre

./: .eslintignore  .eslintrc.js  .prettierrc  LICENSE  README-template.md  README.md  craco.config.js  package.json
.github/workflows/: publish.yml
.husky/: pre-push
docs/: Planning.md  README.md
public/: index.html  prism.js
scripts/: git-pre-push.js  prepare.js
src/: App.css  App.tsx  appSlice.ts  index.css  index.tsx  routes.tsx  theme.ts  theme.tsx  themeSlice.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs
src-tauri/src/commands/: cloud_sync.rs  docs.rs  env.rs  fs.rs  md_parser.rs  mod.rs  test_commands.rs
src-tauri/src/constants/: mod.rs  paths.rs
src-tauri/src/models/: app_db_state.rs  app_dir_paths.rs  app_state.rs  cloud_sync.rs  mod.rs  server_error.rs
src-tauri/src/utils/: error.rs  fsutils.rs  git_utils.rs  logger.rs  mod.rs  sync_state_manager.rs  window_event_manager.rs
src/commands/: cloudSync.ts  fileSystem.ts
src/commonTypes/: index.ts
src/components/: BottomBar.tsx  Bottombar.tsx  CommandModal.tsx  CommandModalContext.tsx  Editor.module.css  Editor.tsx  Render.tsx  Sidebar.tsx  TitleBar.tsx  Titlebar.tsx  TopBar.tsx  Topbar.tsx  testMarkdown.ts
src/components/CommandModal/: commandItems.ts  commandModalSlice.ts  index.tsx
src/components/Editor/: ErrorDisplay.tsx  Loading.tsx  index.tsx
src/components/Render/: index.tsx
src/components/SideBar/: AddDocItem.tsx  AlertButton.tsx  BottomSection.tsx  ItemMenu.tsx  TopSection.tsx  documentsSlice.ts  index.tsx
src/components/Sidebar/: AddDocItem.tsx  BottomSection.tsx  TopSection.tsx  documentsSlice.ts  index.tsx
src/features/cloudSync/: cloudSyncSlice.ts
src/features/documents/: documentsSlice.ts
src/functions/: cloudSync.ts  environment.ts  fileSystem.ts
src/icons/: AppLogoIcon.tsx
src/layouts/App/: index.tsx
src/layouts/Main/: index.tsx
src/redux/: hooks.ts  store.ts
src/styles/markdown/: index.tsx  markdownThemeSlice.ts
src/test/: testMarkdown.ts
src/utils/: ScrollReset.tsx  counterSlice.ts  idGenerator.ts  isTauri.ts  prettierFns.ts  retry.ts  sleep.ts
src/utils/hooks/: useDebounce.tsx
src/utils/markdownParser/: markdownParserSlice.ts
src/views/MdEditor/: index.tsx
src/views/Settings/: Customization.tsx  General.tsx  SettingsButton.tsx  TabBar.tsx  index.tsx
src/views/Settings/Customization/: ThemeChangeListener.tsx  index.tsx
src/views/Settings/General/: SectionAccordionItem.tsx  config.tsx  index.tsx
src/views/Startup/: index.tsx
(+9 files in other folders)
