[package]
name = "mediocre-editor"
version = "0.1.3"
description = "A simple markdown edior"
authors = [ "Nilay Savant" ]
license = ""
repository = ""
default-run = "mediocre-editor"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
comrak = "0.10"
ammonia = "3"
derive_more = "0.99.14"
log = "0.4.14"
walkdir = "2"
env_logger = "0.8.4"
chrono = "0.4"
relative-path = "1.5.0"

  [dependencies.tauri]
  version = "1.0.0-beta"
features = ["api-all"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
