[package]
name = "mediocre-editor"
version = "0.2.3"
description = "A simple markdown edior"
authors = ["Nilay Savant"]
license = ""
repository = ""
default-run = "mediocre-editor"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
comrak = "0.10"
ammonia = "3"
derive_more = "0.99.14"
log = "0.4.14"
walkdir = "2"
env_logger = "0.8.4"
chrono = "0.4"
relative-path = "1.5.0"
pickledb = "0.4.1"
git2 = "0.16"
anyhow = "1.0"
log4rs = "1.0"

[dependencies.tauri]
version = "1.0.0-beta.8"
features = ["api-all"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
